--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -361,7 +361,7 @@ image::UndoRedoActivityDiagram.png[width="650"]
 // end::undoredo[]
 
 //tag::compose[]
-=== Compose feature
+=== Compose email feature
 ==== Current Implementation
 
 The Compose feature works using a third-party dependency, http://www.simplejavamail.org/#/about[Simple Java Mail].
@@ -369,42 +369,46 @@ It allows `.eml` files to be saved onto the computer.
 The feature is facilitated by `EmailModel` and `EmailDirStorage`.
 It implements the following operations:
 
-* `EmailModel#saveEmail(Email email)` -- Stores each newly composed email in the `EmailModel`.
+* `EmailModel#saveComposedEmail(Email email)` -- Stores each newly composed email in the `EmailModel`.
 * `EmailDirStorage#saveEmail(EmailModel email)` -- Saves the newly composed email in the `EmailModel` to the computer.
 
-These operations are exposed in the `Model` interface as `Model#saveEmail(Email email)`, and in the `Storage` interface as `Storage#saveEmail(EmailModel email)` respectively.
+These operations are exposed in the `Model` interface as `Model#saveComposedEmail(Email email)`, and in the `Storage` interface as `Storage#saveEmail(EmailModel email)` respectively.
 
 Given below is an example usage scenario and how the Compose feature behaves at each step:
 
-. The user executes the `Compose` command, which creates an email.
-The `Compose` command calls `Model#saveEmail(Email email)`, saving the email to `EmailModel`.
+Step 1. The user executes either the `ComposeEmailList` command or `ComposeEmailIndex` command, which creates an email.
+The `ComposeEmailList`/`ComposeEmailIndex` command calls `Model#saveComposedEmail(Email email)`, saving the email to `EmailModel`.
 
-. Once the email is saved in the `EmailModel`, the `ModelManager` raises an `EmailSavedEvent`, to indicate that a new
+Step 2. Once the email is saved in the `EmailModel`, the `ModelManager` raises an `EmailSavedEvent`, to indicate that a new
  email is saved to the `EmailModel`.
 
-. The `EmailSavedEvent` goes to the `EventsCenter`, and is then handled by `StorageManager#handleEmailSavedEvent
+Step 3. The `EmailSavedEvent` goes to the `EventsCenter`, and is then handled by `StorageManager#handleEmailSavedEvent
 (EmailSavedEvent event)`, which then calls `EmailDirStorage#saveEmail(EmailModel email)`.
 This saves the email to a specified local directory.
 
-. A preview of the email is displayed on the main window.
+Step 4. A preview of the email is displayed on the main window.
 
 ==== Design Considerations
 
-===== Aspect: File format
+===== Aspect: Method to create emails
 
-* **Pros:** The `.eml` file format is compliant with the RFC-822 format, which is industry recognised, and can be
-opened and viewed using many applications.`.eml` files can also contain attachments.
-* **Cons:** `.eml` file alone is not useful alone. More implementations are required to make `.eml` useful in Hallper.
-
-===== Aspect: Using http://www.simplejavamail.org/#/about[Simple Java Mail]
-
-http://www.simplejavamail.org/#/about[Simple Java Mail] contains various methods to conveniently create emails.
-It can also be used to send emails if Hallper is extended to include online capabilities.
+* **Alternative 1 (current choice):** Use http://www.simplejavamail.org/#/about[Simple Java Mail].
+** Pros: http://www.simplejavamail.org/#/about[Simple Java Mail] contains various methods to conveniently create emails.
 The library is easy to understand so any new developer can easily extend the current features.
+** Cons: The design of created emails is limited to the http://www.simplejavamail.org/#/about[Simple Java Mail] API.
+* **Alternative 2:** Write a custom email builder.
+** Pros: The design of created emails can be freely manipulated.
+** Cons: Much more code has to be written.
 
-===== Aspect: HTML Text
+===== Aspect: Text type
 
-User input for email content is saved as HTML Text so that users with HTML Text Formatting knowledge can easily format the body of the email.
+* **Alternative 1 (current choice):** HTML text
+** Pros: Users with HTML knowledge can manipulate the content of the email.
+** Cons: Users unfamiliar with HTML minimally has to learn how the `<br>` tag works.
+* **Alternative 2:** Plain text
+** Pros: Plain text is easily understood by almost any user.
+** Cons: The design of the email content is limited.
+
 //end::compose[]
 
 // tag::calendar[]
