--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -571,9 +571,8 @@ image::implementation/BudgetPanelSequenceDiagram.png[width="800"]
 
 === Budget
 ==== Current Implementation
-The budget feature is one whereby after a user sets a budget, if the total spendings of a user exceeds his budget
-during a period determined by the user, a warning will show up to inform the user that adding an expense results in
-him exceeding his set budget.
+The budget feature allows the user to set a budget for a specific time period. 
+If the user's total spending exceeds their budget in the specified time period, a warning will be shown to the user.
 
 The current implementation for budget tracking is described as below.
 
