UserGuide.adoc: Edit documentation
- Edit FAQ.

Signed-off-by: jjlee050 <josephlee050@gmail.com>

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -427,8 +427,8 @@ This section is designed to help you answer any issues that are frequently asked
 *A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous ClinicIO folder.
 
 *Q*: How to save data in ClinicIO? +
-*A*: ClinicIO data is saved in the hard disk automatically after any command that changes the data. +
-There is no need to save manually.
+*A*: There is no need for you to save manually. ClinicIO will automatically save data to the hard disk after any command that changes the data. +
+
 
 == Command Summary
 
