--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -239,6 +239,72 @@ Classes used by multiple components are in the `seedu.clinicio.commons` package.
 
 This section describes some noteworthy details on how certain features are implemented.
 
+// tag::queue[]
+=== Queue feature
+This feature allows the user to perform operations related to the queue. In particular, it provides the functionality to assign a patient into the queue, remove a patient from the queue and show the list of patients in the queue.
+==== Current Implementation
+The Queue feature contains several operations to indirectly manipulate the two queues underlying the feature.
+The two queues are `patientQueue` and `preferenceQueue`, both of which are hidden from the end user. To the end user, there
+exists only one queue. When a patient gets assigned to the queue without any preferred doctor, the patient will be inserted into
+the `patientQueue` underneath. In the scenario where a patient has a preferred doctor, the patient will be inserted into the
+`preferenceQueue`. +
+When a room is available, the system will look for the first patient in the `preferenceQueue` whose preferred doctor is in the room.
+It will then compare this patient with the frontmost patient from the `patientQueue` on their arrival time. The patient who arrives
+earlier will get to consult with the doctor. +
+Both queues are composed of `java#ArrayList` as it provides richer functionalities compared to `java#Queue` to manipulate items in the list. +
+This allows the system to handle the situation where a patient in the middle of the queue decides to leave the queue.
+In that case, the receptionist, who is the end user of ClinicIO, can simply type in a command to remove the patient from the queue. +
+The implemented operations for Queue are: +
+* `enqueuepatient` Command - Assigns a patient into the queue. +
+* `dequeuepatient` Command - Removes a patient from anywhere in the queue. +
+* `showqueue` Command - Shows a list of all patients in the queue. +
+
+Given below is an example usage scenario and how the queue-related operations behave at each step. +
+Step 1: The user lists all the patients using the `list` command. All patients in the ClinicIO record are be displayed.
+Step 2: The user executes `enqueuepatient 5` command to assign the 5th patient in the list into the queue. Now the queue has
+1 patient.
+Step 3: The user finds all patients with names `Damith` using `find Damith` command. All patients with names `Damith` in the ClinicIO record will be displayed.
+Step 4: The user executes `enqueuepatient 2` to assign the 2dn patient in the displayed list into the queue. Now the queue has 2 patients.
+Step 5: The user lists all patients in the queue by using `showqueue` command. All patients currently waiting in the queue are displayed.
+
+==== Design Considerations
+
+===== Aspect: How enqueuepatient command executes
+
+* **Alternative 1 (current choice):** Inserts the patient into one of the two underlying queues.
+** Pros: Easier to implement. Slightly faster than the other alternative.
+** Con: May have performance issue in terms of memory usage.
+* **Alternative 2:** Insert the patient into only one queue.
+** Pro: Uses less memory as only one data structure is needed.
+** Con: Time complexity is slightly worse than the current implementation.
+
+===== Aspect: How dequeuepatient command executes
+
+* **Alternative 1 (current choice):** Looks for the queue (patientQueue or preferenceQueue) from which the patient is to be removed. Then searches for the patient and removes from the queue.
+** Pro: Slightly faster than the other alternative.
+** Con: May have performance issue in terms of memory usage.
+* **Alternative 2:** Naively looks for the patient in the queue, assuming Alternative 2 of `enqueuepatient` command is used (only one underlying queue).
+** Pros: Uses less memory. Easy to implement as only one naive search is required.
+** Con: Time complexity is slightly worse than the current implementation.
+
+===== Aspect: How showqueue command executes
+
+* Shows a list of patients filtered according to `Patient#isQueuing()` which is basically the queuing status of the patient.
+
+
+===== Aspect: Data structures to support the queue-related commands
+
+* **Alternative 1 (current choice):** Uses two ArrayLists to store the patients.
+** Pros: Easier to implement. Provides more functionalities compared to Queues/LinkedList.
+** Con: Uses more memory than using only one ArrayList.
+* **Alternative 2:** Uses one ArrayList to store the patients.
+** Pro: Uses less memory than Alternative 1.
+** Con: Time complexity of looking for a particular patient is worse.
+* **Alternative 3: ** Uses Queue/LinkedList
+** Pro: Easy to implement. Very fast operation for popping the frontmost patient.
+** Con: Limited functionalities. Removing a patient from the middle of the data structure requires extra codes.
+// end::queue[]
+
 // tag::undoredo[]
 === Undo/Redo feature
 ==== Current Implementation
