--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -242,72 +242,6 @@ This section describes some noteworthy details on how certain features are imple
 // tag::queue[]
 === Queue feature
 This feature allows the user to perform operations related to the queue. In particular, it provides the functionality to assign a patient into the queue, remove a patient from the queue and show the list of patients in the queue.
-==== Current Implementation
-The Queue feature contains several operations to indirectly manipulate the two queues underlying the feature.
-The two queues are `patientQueue` and `preferenceQueue`, both of which are hidden from the end user. To the end user, there
-exists only one queue. When a patient gets assigned to the queue without any preferred doctor, the patient will be inserted into
-the `patientQueue` underneath. In the scenario where a patient has a preferred doctor, the patient will be inserted into the
-`preferenceQueue`. +
-When a room is available, the system will look for the first patient in the `preferenceQueue` whose preferred doctor is in the room.
-It will then compare this patient with the frontmost patient from the `patientQueue` on their arrival time. The patient who arrives
-earlier will get to consult with the doctor. +
-Both queues are composed of `java#ArrayList` as it provides richer functionalities compared to `java#Queue` to manipulate items in the list. +
-This allows the system to handle the situation where a patient in the middle of the queue decides to leave the queue.
-In that case, the receptionist, who is the end user of ClinicIO, can simply type in a command to remove the patient from the queue. +
-The implemented operations for Queue are: +
-* `enqueuepatient` Command - Assigns a patient into the queue. +
-* `dequeuepatient` Command - Removes a patient from anywhere in the queue. +
-* `showqueue` Command - Shows a list of all patients in the queue. +
-
-Given below is an example usage scenario and how the queue-related operations behave at each step. +
-Step 1: The user lists all the patients using the `list` command. All patients in the ClinicIO record are be displayed.
-Step 2: The user executes `enqueuepatient 5` command to assign the 5th patient in the list into the queue. Now the queue has
-1 patient.
-Step 3: The user finds all patients with names `Damith` using `find Damith` command. All patients with names `Damith` in the ClinicIO record will be displayed.
-Step 4: The user executes `enqueuepatient 2` to assign the 2dn patient in the displayed list into the queue. Now the queue has 2 patients.
-Step 5: The user lists all patients in the queue by using `showqueue` command. All patients currently waiting in the queue are displayed.
-
-==== Design Considerations
-
-===== Aspect: How enqueuepatient command executes
-
-* **Alternative 1 (current choice):** Inserts the patient into one of the two underlying queues.
-** Pros: Easier to implement. Slightly faster than the other alternative.
-** Con: May have performance issue in terms of memory usage.
-* **Alternative 2:** Insert the patient into only one queue.
-** Pro: Uses less memory as only one data structure is needed.
-** Con: Time complexity is slightly worse than the current implementation.
-
-===== Aspect: How dequeuepatient command executes
-
-* **Alternative 1 (current choice):** Looks for the queue (patientQueue or preferenceQueue) from which the patient is to be removed. Then searches for the patient and removes from the queue.
-** Pro: Slightly faster than the other alternative.
-** Con: May have performance issue in terms of memory usage.
-* **Alternative 2:** Naively looks for the patient in the queue, assuming Alternative 2 of `enqueuepatient` command is used (only one underlying queue).
-** Pros: Uses less memory. Easy to implement as only one naive search is required.
-** Con: Time complexity is slightly worse than the current implementation.
-
-===== Aspect: How showqueue command executes
-
-* Shows a list of patients filtered according to `Patient#isQueuing()` which is basically the queuing status of the patient.
-
-
-===== Aspect: Data structures to support the queue-related commands
-
-* **Alternative 1 (current choice):** Uses two ArrayLists to store the patients.
-** Pros: Easier to implement. Provides more functionalities compared to Queues/LinkedList.
-** Con: Uses more memory than using only one ArrayList.
-* **Alternative 2:** Uses one ArrayList to store the patients.
-** Pro: Uses less memory than Alternative 1.
-** Con: Time complexity of looking for a particular patient is worse.
-* **Alternative 3: ** Uses Queue/LinkedList
-** Pro: Easy to implement. Very fast operation for popping the frontmost patient.
-** Con: Limited functionalities. Removing a patient from the middle of the data structure requires extra codes.
-// end::queue[]
-
-// tag::queue[]
-=== Queue feature
-This feature allows the user to perform operations related to the queue. In particular, it provides the functionality to assign a patient into the queue, remove a patient from the queue and show the list of patients in the queue.
 
 ==== Current Implementation
 The Queue feature contains several operations to indirectly manipulate the two queues underlying the feature.
@@ -385,6 +319,86 @@ Step 6: The user lists all patients in the queue by using `showqueue` command. A
 ** Pro: Easy to implement. Very fast operation for popping the frontmost patient.
 ** Con: Limited functionalities. Removing a patient from the middle of the data structure requires extra codes.
 // end::queue[]
+
+// tag::undoredo[]
+=== Undo/Redo feature
+==== Current Implementation
+
+The undo/redo mechanism is facilitated by `VersionedAddressBook`.
+It extends `ClinicIO` with an undo/redo history, stored internally as an `addressBookStateList` and `currentStatePointer`.
+Additionally, it implements the following operations:
+
+* `VersionedAddressBook#commit()` -- Saves the current ClinicIO state in its history.
+* `VersionedAddressBook#undo()` -- Restores the previous ClinicIO state from its history.
+* `VersionedAddressBook#redo()` -- Restores a previously undone ClinicIO state from its history.
+
+These operations are exposed in the `Model` interface as `Model#commitAddressBook()`, `Model#undoAddressBook()` and `Model#redoAddressBook()` respectively.
+
+Given below is an example usage scenario and how the undo/redo mechanism behaves at each step.
+
+Step 1. The user launches the application for the first time. The `VersionedAddressBook` will be initialized with the initial ClinicIO state, and the `currentStatePointer` pointing to that single Clinic IO state.
+
+image::UndoRedoStartingStateListDiagram.png[width="800"]
+
+Step 2. The user executes `delete 5` command to delete the 5th patient in the ClinicIO. The `delete` command calls `Model#commitAddressBook()`, causing the modified state of the ClinicIO after the `delete 5` command executes to be saved in the `addressBookStateList`, and the `currentStatePointer` is shifted to the newly inserted ClinicIO state.
+
+image::UndoRedoNewCommand1StateListDiagram.png[width="800"]
+
+Step 3. The user executes `add n/David ...` to add a new patient. The `add` command also calls `Model#commitAddressBook()`, causing another modified ClinicIO state to be saved into the `addressBookStateList`.
+
+image::UndoRedoNewCommand2StateListDiagram.png[width="800"]
+
+[NOTE]
+If a command fails its execution, it will not call `Model#commitAddressBook()`, so the ClinicIO state will not be saved into the `addressBookStateList`.
+
+Step 4. The user now decides that adding the patient was a mistake, and decides to undo that action by executing the `undo` command. The `undo` command will call `Model#undoAddressBook()`, which will shift the `currentStatePointer` once to the left, pointing it to the previous ClinicIO state, and restores the ClinicIO to that state.
+
+image::UndoRedoExecuteUndoStateListDiagram.png[width="800"]
+
+[NOTE]
+If the `currentStatePointer` is at index 0, pointing to the initial ClinicIO state, then there are no previous ClinicIO states to restore. The `undo` command uses `Model#canUndoAddressBook()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the undo.
+
+The following sequence diagram shows how the undo operation works:
+
+image::UndoRedoSequenceDiagram.png[width="800"]
+
+The `redo` command does the opposite -- it calls `Model#redoAddressBook()`, which shifts the `currentStatePointer` once to the right, pointing to the previously undone state, and restores the ClinicIO to that state.
+
+[NOTE]
+If the `currentStatePointer` is at index `addressBookStateList.size() - 1`, pointing to the latest ClinicIO state, then there are no undone ClinicIO states to restore. The `redo` command uses `Model#canRedoAddressBook()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the redo.
+
+Step 5. The user then decides to execute the command `list`. Commands that do not modify the ClinicIO, such as `list`, will usually not call `Model#commitAddressBook()`, `Model#undoAddressBook()` or `Model#redoAddressBook()`. Thus, the `addressBookStateList` remains unchanged.
+
+image::UndoRedoNewCommand3StateListDiagram.png[width="800"]
+
+Step 6. The user executes `clear`, which calls `Model#commitAddressBook()`. Since the `currentStatePointer` is not pointing at the end of the `addressBookStateList`, all ClinicIO states after the `currentStatePointer` will be purged. We designed it this way because it no longer makes sense to redo the `add n/David ...` command. This is the behavior that most modern desktop applications follow.
+
+image::UndoRedoNewCommand4StateListDiagram.png[width="800"]
+
+The following activity diagram summarizes what happens when a user executes a new command:
+
+image::UndoRedoActivityDiagram.png[width="650"]
+
+==== Design Considerations
+
+===== Aspect: How undo & redo executes
+
+* **Alternative 1 (current choice):** Saves the entire ClinicIO.
+** Pros: Easy to implement.
+** Cons: May have performance issues in terms of memory usage.
+* **Alternative 2:** Individual command knows how to undo/redo by itself.
+** Pros: Will use less memory (e.g. for `delete`, just save the patient being deleted).
+** Cons: We must ensure that the implementation of each individual command are correct.
+
+===== Aspect: Data structure to support the undo/redo commands
+
+* **Alternative 1 (current choice):** Use a list to store the history of ClinicIO states.
+** Pros: Easy for new Computer Science student undergraduates to understand, who are likely to be the new incoming developers of our project.
+** Cons: Logic is duplicated twice. For example, when a new command is executed, we must remember to update both `HistoryManager` and `VersionedAddressBook`.
+* **Alternative 2:** Use `HistoryManager` for undo/redo
+** Pros: We do not need to maintain a separate list, and just reuse what is already in the codebase.
+** Cons: Requires dealing with commands that have already been undone: We must remember to skip these commands. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` now needs to do two different things.
+// end::undoredo[]
 
 
 //tag::apptfeature[]
