--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -270,7 +270,7 @@ Step 1: The user lists all the patients using the `list` command. All patients i
 
 Step 2: The user executes `enqueuepatient 5` command to assign the 5th patient in the list into the queue. This patient has no preferred doctor. Now the queue has 1 patient. Underlying the queue, the patient is assigned into `patientQueue`. The `preferenceQueue` remains empty. +
 
-image::q1.jpg[]
+image::q1.png[]
 
 image::q2.png[]
 
