--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -310,10 +310,10 @@ Format: `list`
 //`select 1` +
 //Selects the 1st expense in the results of the `find` command.
 
-=== Setting a budget: `setBudget`
-Sets the budget for Expense Tracker. +
+=== Setting a totalBudget: `setBudget`
+Sets the totalBudget for Expense Tracker. +
 
-The Expense Tracker will warn you when your total expenditure exceeds the budget that is set.
+The Expense Tracker will warn you when your total expenditure exceeds the totalBudget that is set.
 
 Format: `setBudget MONEY_WITH_TWO_DECIMAL_PLACES`
 
@@ -321,9 +321,9 @@ Format: `setBudget MONEY_WITH_TWO_DECIMAL_PLACES`
 *Examples:*
 
 * `setBudget 2.00` +
- Sets a budget of $2.00.
+ Sets a totalBudget of $2.00.
 * `setBudget 20.00` +
- Sets a budget of $20.00.
+ Sets a totalBudget of $20.00.
 ****
 
 [NOTE]
@@ -332,10 +332,10 @@ Format: `setBudget MONEY_WITH_TWO_DECIMAL_PLACES`
 * MONEY_WITH_TWO_DECIMAL_PLACES must be a positive number with two decimal places.
 ====
 
-=== Setting a recurring frequency for budget: `setRecurrenceFrequency`
-Sets the recurrence frequency for the budget of Expense Tracker.
+=== Setting a recurring frequency for totalBudget: `setRecurrenceFrequency`
+Sets the recurrence frequency for the totalBudget of Expense Tracker.
 
-Expense Tracker will reset your budget after every `FREQUENCY`
+Expense Tracker will reset your totalBudget after every `FREQUENCY`
 
 Format: `setRecurrenceFrequency [hrs/HOURS] [min/MINUTES] [sec/SECONDS]`
 
@@ -344,9 +344,9 @@ Format: `setRecurrenceFrequency [hrs/HOURS] [min/MINUTES] [sec/SECONDS]`
 *Examples:*
 
 * `setRecurrenceFrequency hrs/1` +
-    Sets the budget to reset every 1 hour
+    Sets the totalBudget to reset every 1 hour
 * `setRecurrenceFrequency hrs/1 min/30` +
-    Sets the budget reset every 1 hour and 30 minutes
+    Sets the totalBudget reset every 1 hour and 30 minutes
 ****
 
 [NOTE]
@@ -499,9 +499,9 @@ e.g. `find c/School`
 * *List* : `list`
 //* *Select* : `select INDEX` +
 //e.g.`select 2`
-* *Set budget* : `setBudget` +
+* *Set totalBudget* : `setBudget` +
 e.g. `setBudget 20.00`
-* *Set recurring frequency for budget*: `setRecurrenceFrequency [hrs/HOURS] [min/MINUTES] [sec/SECONDS]` +
+* *Set recurring frequency for totalBudget*: `setRecurrenceFrequency [hrs/HOURS] [min/MINUTES] [sec/SECONDS]` +
 * *History* : `history`
 * *Undo* : `undo`
 * *Redo* : `redo`
