DeveloperGuide.adoc: Add diagrams
- Add activity diagram.

Signed-off-by: jjlee050 <josephlee050@gmail.com>

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -499,6 +499,10 @@ The following sequence diagram shows how the login authentication works:
 
 image::LoginSequenceDiagram.png[width="1080"]
 
+The following activity diagram summarizes what happens when a user executes the login command:
+
+image::LoginActivityDiagram.png[width="1080"]
+
 ==== Design Considerations
 
 ===== Aspect: Retrieval of password
