Update Project Portfolio Page
- Edit overview
- Remove other projects

Signed-off-by: jjlee050 <josephlee050@gmail.com>

--- a/docs/team/jjlee050.adoc
+++ b/docs/team/jjlee050.adoc
@@ -3,13 +3,14 @@
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== PROJECT: AddressBook - Level 4
+== PROJECT: ClinicIO
 
 ---
 
 == Overview
 
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
+ClinicIO is a clinic management desktop application so that user can manage a clinic with ease and efficiency.
+ClinicIO can be used to manage patient records, queues, medical inventory, appointments as well as view detailed statistics.
 
 == Summary of contributions
 
@@ -61,10 +62,3 @@ include::../UserGuide.adoc[tag=dataencryption]
 include::../DeveloperGuide.adoc[tag=login]
 
 include::../DeveloperGuide.adoc[tag=dataencryption]
-
-
-== PROJECT: PowerPointLabs
-
----
-
-_{Optionally, you may include other projects in your portfolio.}_
